--- a/shelter/index.html
+++ b/shelter/index.html
@@ -27,7 +27,7 @@
 						</div>
 						<nav class="nav__menu">
 							<a id="aboutshel" href="##">About the shelter</a>
-							<a href="/burakmikita-JSFE2022Q1/shelter/pages/pets/pets.html">Our pets</a>
+							<a href="https://burakmikita.github.io/shelter/shelter/pages/pets/pets.html">Our pets</a>
 							<a href="#help">Help the shelter</a>
 							<a href="#contact">Contacts</a>
 						</nav>
@@ -45,7 +45,7 @@
 						<div class="burger__line third"></div>
 						<nav class="main__menu">
 							<a id="aboutshel" href="##">About the shelter</a>
-							<a href="/burakmikita-JSFE2022Q1/shelter/pages/pets/pets.html">Our pets</a>
+							<a href="https://burakmikita.github.io/shelter/shelter/pages/pets/pets.html">Our pets</a>
 							<a href="#help">Help the shelter</a>
 							<a href="#contact">Contacts</a>
 						</nav>
@@ -96,7 +96,8 @@
 								are looking for a house</h3>
 						</div>
 						<div class="pets__slider">
-							<div class="arrow__left btn" id="btn-left"><span><img src="./assets/images/Arrow.png"></span></div>
+							<div class="arrow__left btn" id="btn-left"><span><img
+										src="./assets/images/Arrow.png"></span></div>
 
 							<div class="carousel-wrapper" id="carousel-wrapper">
 								<div class="carousel slider__cards " id="carousel">
@@ -104,7 +105,8 @@
 
 										<div class="card ">
 											<a class="hover__action" id="1" href="#openModali">
-												<div class="card__img"><img src="./assets/images/pets-jennifer.png"></div>
+												<div class="card__img"><img src="./assets/images/pets-jennifer.png">
+												</div>
 												<div class="card__name">
 													<p>Jennifer</p>
 												</div>
@@ -140,7 +142,8 @@
 
 										<div class="card">
 											<a class="hover__action" id="4" href="#openModali">
-												<div class="card__img"><img src="./assets/images/pets-scarlet.png"></div>
+												<div class="card__img"><img src="./assets/images/pets-scarlet.png">
+												</div>
 												<div class="card__name">
 													<p>Scarlett</p>
 												</div>
@@ -151,7 +154,8 @@
 
 										<div class="card tre">
 											<a class="hover__action" id="5" href="#openModali">
-												<div class="card__img"><img src="./assets/images/pets-katrine.png"></div>
+												<div class="card__img"><img src="./assets/images/pets-katrine.png">
+												</div>
 												<div class="card__name">
 													<p>Katrine</p>
 												</div>
@@ -176,7 +180,8 @@
 										<div class="card">
 											<a class="hover__action" id="7" href="#openModali">
 
-												<div class="card__img"><img src="./assets/images/pets-freddie.png"></div>
+												<div class="card__img"><img src="./assets/images/pets-freddie.png">
+												</div>
 												<div class="card__name">
 													<p>Freddie</p>
 												</div>
@@ -212,7 +217,8 @@
 								</div>
 							</div>
 
-							<div class="arrow__right btn" id="btn-right"><span><img src="./assets/images/Arrowleft.png"></span>
+							<div class="arrow__right btn" id="btn-right"><span><img
+										src="./assets/images/Arrowleft.png"></span>
 							</div>
 
 						</div>
