--- a/shelter/pages/pets/pets.html
+++ b/shelter/pages/pets/pets.html
@@ -18,16 +18,16 @@
 			<div class="container">
 				<div class="container__header">
 				<header class="header">
-					<a href="/burakmikita-JSFE2022Q1/shelter/">
+					<a href="https://burakmikita.github.io/shelter/shelter/">
 						<div class="logo">
 							<h1 class="title">Cozy House</h1>
 							<p class="subtitle">Shelter for pets in Boston</p>
 						</div>
 					</a>
 					<nav>
-						<a href="/burakmikita-JSFE2022Q1/shelter/">About the shelter</a>
+						<a href="https://burakmikita.github.io/shelter/shelter/">About the shelter</a>
 						<a id="ourpets" href="##">Our pets</a>
-						<a href="/burakmikita-JSFE2022Q1/shelter/#help">Help the shelter</a>
+						<a href="https://burakmikita.github.io/shelter/shelter/#help">Help the shelter</a>
 						<a href="#contact">Contacts</a>
 					</nav>
 				</header>
@@ -41,9 +41,9 @@
 					<div class="burger__line second"></div>
 					<div class="burger__line third"></div>
 					<nav class="main__menu">
-						<a href="/burakmikita-JSFE2022Q1/shelter/">About the shelter</a>
+						<a href="https://burakmikita.github.io/shelter/shelter/">About the shelter</a>
 						<a id="ourpets" href="##">Our pets</a>
-						<a href="/burakmikita-JSFE2022Q1/shelter/#help">Help the shelter</a>
+						<a href="https://burakmikita.github.io/shelter/shelter/#help">Help the shelter</a>
 						<a href="#contact">Contacts</a>
 					</nav>
 				</header>
